--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
         </div>
         <!-- Itens Cadastrados -->
         <div class="mt-5 p-5">
-            <ul class="list-group">
-                <li class="list-group-item">Item 1</li>
+            <ul id="lista-nomes" class="list-group">
+                <!-- <li class="list-group-item">Item 1</li>
                 <li class="list-group-item">Item 2</li>
                 <li class="list-group-item">Item 3</li>
-                <li class="list-group-item">Item 4</li>
+                <li class="list-group-item">Item 4</li> -->
             </ul>
         </div>
     </div>
